--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-navigation": "^1.0.0-beta.7",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-social-badge": "^1.0.6",
     "reactstrap": "^8.4.1"
   },
   "scripts": {
@@ -40,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-social-icons": "^4.1.0"
   }
 }
