--- a/package.json
+++ b/package.json
@@ -24,7 +24,14 @@
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "thunk": "0.0.1"
+    "thunk": "0.0.1",
+    "aws-sdk": "^2.663.0",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
+    "express": "^4.15.5",
+    "mongoose": "^5.9.10",
+    "validator": "^13.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
